[tool.poetry]
name = "openrelik-worker-analyzer-config"
version = "2024.10.21"
description = "Analyze config files"
authors = ["Ramses de Beer <ramsesdebeer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["redis"], version = "^5.4.0"}
openrelik-worker-common = "^2024.10.25"
debugpy = "^1.8.7"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
