[tool.poetry]
name = "openrelik-worker-analyzer-config"
version = "0.2.0"
description = "Analyze config files"
authors = ["Ramses de Beer <ramsesdebeer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.11.0"
debugpy = "^1.8.7"
openrelik-ai-common = "^0.4.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
